# HindiUrduWordOfDay

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: CMakeLists.txt
backend/data/: words.json
backend/src/: auth.cpp  auth.hpp  catalog.cpp  catalog.hpp  db.cpp  db.hpp  fuzzy.cpp  fuzzy.hpp  main.cpp
backend/tests/: fuzzy_tests.cpp
backend/tools/: append_catalog_tsv.cpp  merge_word_catalog.cpp
docker/: start.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts  style.css
